[gd_scene load_steps=2 format=3 uid="uid://6diep3nhd1k0"]

[ext_resource type="Script" uid="uid://c7jga7obtr7f0" path="res://examples/exo_player_test_stress.gd" id="1_stress"]

[node name="ExoPlayerStressTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stress")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Players: 0 | Playing: 0 | GPU Mode: 0"
horizontal_alignment = 1

[node name="GlobalControls" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoadAllBtn" type="Button" parent="VBoxContainer/GlobalControls"]
layout_mode = 2
text = "Load All"

[node name="PlayAllBtn" type="Button" parent="VBoxContainer/GlobalControls"]
layout_mode = 2
text = "Play All"

[node name="PauseAllBtn" type="Button" parent="VBoxContainer/GlobalControls"]
layout_mode = 2
text = "Pause All"

[node name="StopAllBtn" type="Button" parent="VBoxContainer/GlobalControls"]
layout_mode = 2
text = "Stop All"

[node name="Separator" type="VSeparator" parent="VBoxContainer/GlobalControls"]
layout_mode = 2

[node name="AddPlayerBtn" type="Button" parent="VBoxContainer/GlobalControls"]
layout_mode = 2
text = "+"

[node name="RemovePlayerBtn" type="Button" parent="VBoxContainer/GlobalControls"]
layout_mode = 2
text = "-"

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "ExoPlayer Stress Test"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/GlobalControls/LoadAllBtn" to="." method="_on_load_all_pressed"]
[connection signal="pressed" from="VBoxContainer/GlobalControls/PlayAllBtn" to="." method="_on_play_all_pressed"]
[connection signal="pressed" from="VBoxContainer/GlobalControls/PauseAllBtn" to="." method="_on_pause_all_pressed"]
[connection signal="pressed" from="VBoxContainer/GlobalControls/StopAllBtn" to="." method="_on_stop_all_pressed"]
[connection signal="pressed" from="VBoxContainer/GlobalControls/AddPlayerBtn" to="." method="_on_add_player_pressed"]
[connection signal="pressed" from="VBoxContainer/GlobalControls/RemovePlayerBtn" to="." method="_on_remove_player_pressed"]
